<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/copyrightTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.02"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineHorizontal3"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.38"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/emailButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/email_name"
                    app:borderWidth="0dp"
                    app:elevation="5dp"
                    app:fabCustomSize="60dp"
                    app:layout_constraintBottom_toBottomOf="@+id/about"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/about"
                    app:maxImageSize="40dp"
                    app:srcCompat="@drawable/baseline_email_24"
                    app:tint="@color/blue_day"
                    android:layout_marginRight="16dp"
                    tools:targetApi="lollipop" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ikon_news"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

                <TextView
                    android:id="@+id/emailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/email_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/baseline_email_24"
                    app:layout_constraintEnd_toEndOf="@+id/imgProfile"
                    app:layout_constraintStart_toStartOf="@+id/imgProfile"
                    app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

                <TextView
                    android:id="@+id/versionApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/baseline_android_24"
                    app:layout_constraintEnd_toEndOf="@+id/emailName"
                    app:layout_constraintStart_toStartOf="@+id/emailName"
                    app:layout_constraintTop_toBottomOf="@+id/emailName" />

                <TextView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/about"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/versionApp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/dark_mode"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/about"
                    app:layout_constraintTop_toBottomOf="@+id/about" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/copyright"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>